# c1_fvk_demos

./: .gitignore  MATTHIAS_circular_disc.cc  Makefile.am  axisym.map  axisym_displ_based_fvk.cc  circular_disc.bash  circular_disc.cc  circular_disc.cc.orig  circular_sector.cc  clamped_square_inflation.cc  disk.pvsm  hexagon.bash  hexagon.cc  pad_axisymmetric_to_cartesian.bash  rolling_clamp_disc.bash  rolling_clamp_disc.cc  rotated_square.cc  rotated_square_upgraded.cc  sector_corner_modes.bash  sector_corner_modes.cc  square_corner_modes.cc  star_trek.cc  template.bash  triangular_plate.cc  unrotated_square.bash  unrotated_square.cc  validate_clamped_disk.bash  validate_clamped_disk.lay
Modes_sector/: c_c_45deg_5.39.csv  c_c_45deg_9.56.csv  c_f_45deg_2.15.csv  c_f_45deg_5.00.csv  c_f_45deg_7.58.csv  c_p_45deg_4.81.csv  c_p_45deg_8.87.csv  c_s_45deg_2.74.csv  c_s_45deg_6.85.csv  p_f_45deg_-0.00.csv  p_f_45deg_10.95.csv  p_f_45deg_3.65.csv  p_p_45deg_11.00.csv  p_p_45deg_5.00.csv  p_p_45deg_9.00.csv  p_s_45deg_11.00.csv
Modes_square/: c_c_90deg_2.74.csv  c_c_90deg_4.81.csv  c_f_90deg_3.00.csv  c_p_90deg_5.00.csv  c_s_90deg_3.00.csv  p_f_90deg_2.00.csv  p_f_90deg_4.00.csv  p_f_90deg_6.00.csv
